continue complete login, register and otp verify
