# apps/auth-service/src/swagger-output.json
@@ -38,7 +38,7 @@
         }
       }
     },
-    "/verify-registration": {
+    "/verify-user": {
       "post": {
         "description": "",
         "parameters": [
@@ -71,7 +71,7 @@
         }
       }
     },
-    "/login": {
+    "/login-user": {
       "post": {
         "description": "",
         "parameters": [
@@ -94,6 +94,53 @@
         "responses": {
           "200": {
             "description": "OK"
+          }
+        }
+      }
+    },
+    "/forgot-password-user": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
+          }
+        }
+      }
+    },
+    "/reset-password-user": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "email": {
+                  "example": "any"
+                },
+                "newPassword": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/verify-forgot-password-user": {
+      "post": {
+        "description": "",
+        "responses": {
+          "default": {
+            "description": ""
           }
         }
       }
